# UploadVerse

./: .env.example  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  Dockerfile  GETTING_STARTED_NOW.md  PROJECT_STATUS.md  README.md  SAFETY.md  USER_SETUP.md  WEB_INTERFACE.md  YOUTUBE_SETUP.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  upload_manager.py
api/: __init__.py  api_routes.py  app.py  web_routes.py
api/static/css/: main.css
api/static/js/: uploads.js
api/templates/: base.html  config.html  index.html  publish.html
api/templates/components/: credentials_status.html
cli/: main.py
data/safety/: rate_limits.json
docs/: cli_usage.md  docker_usage.md  instagram_setup.md  metadata_format.md  tiktok_setup.md  youtube_setup.md
examples/: library_usage.py
prompts/: MasterPlan.md  step1.md  step2.md  step3-audit.md  step3-requests.md  step3.md  step4.md  step5.md  step6.md
scripts/: setup_youtube_auth.py  test_youtube_upload.py
src/video_publisher/: __init__.py
src/video_publisher/core/: engine.py  models.py  platform_router.py  video_analyzer.py
src/video_publisher/metadata/: __init__.py  handler.py  schema.py
src/video_publisher/safety/: __init__.py  emergency_stop.py  rate_limiter.py  risk_detector.py
tests/: README.md  test.py  test_core.py  test_credentials.py  test_interfaces.py  test_platforms.py  test_scheduling.py
